# ColorTracker

./: CMakeLists.txt  LICENSE  README.md  README.txt  color_tracker.cpp  color_tracker_parameters.cpp  color_tracker_parameters.hpp  source.cpp  source.cpp~  static.cpp  tracker  vot.hpp
include/ColorTracker/: color_tracker.hpp  color_tracker_parameters.hpp
sequences/deer/: deer_frames.txt
src/: color_tracker.cpp  color_tracker_parameters.cpp  demo-video.cpp  demo-vot.cpp
